<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titleLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <TextView
        android:id="@+id/descriptionLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabelTv"
        android:text="Create a new account below."
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"
        />


    <!--Full Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/fullNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Phone Num-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumTil"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/fullNameTil"
        >

        <EditText
            android:id="@+id/phoneNumEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumTil">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_below="@id/emailTil"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password Confirmation-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmTil"
        android:layout_width="match_parent"
        android:layout_below="@id/passwordTil"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordConfirmEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Repeat Password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Login Button-->
    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordConfirmTil"
        android:text="Sign Up"/>

</RelativeLayout>