...
    <item android:id="@+id/nav_invitation"
        android:title = "Invitations"
        android:icon="@drawable/ic_invitation"/>
    <item android:id="@+id/nav_responses"
        android:title = "@string/responses"
        android:icon="@drawable/ic_responses"/>
    <item android:id="@+id/nav_settings"
        android:title = "Settings"
        android:icon="@drawable/ic_settings"/>
</menu>
